--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
+removed_sources:
+  Object-Accessor-0.42.tar.gz: 949b781498acc0bf5382d9c53cf041f20039db56
 sources:
-  "Object-Accessor-0.42.tar.gz": 949b781498acc0bf5382d9c53cf041f20039db56
+  Object-Accessor-0.48.tar.gz: 0b97227252a0551c946b9f112a577b9d59ffd4ae
